--- a/pv-pod.yaml
+++ b/pv-pod.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: task-pv-pod
+  labels:
+   app: task-pv-pod
 spec:
   volumes:
     - name: task-pv-storage
